--- a/result.html
+++ b/result.html
@@ -89,7 +89,8 @@
                                 <path d="M13.6404 13.641L10.9443 10.9449" stroke="white" stroke-width="1.47" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                         </button>
-                    </form>        
+                    </form>
+        
                     <div class="header__user-actions">
                         <button class="header__search-button">
                             <svg xmlns="http://www.w3.org/2000/svg" width="21" height="23" viewBox="0 0 21 23" fill="none">
@@ -105,7 +106,7 @@
                               </svg>
                         </button>
 
-                        <a class="header__cart" href="#">
+                        <a class="header__cart" href="basket.html">
                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="26" viewBox="0 0 30 26" fill="none">
                                 <g clip-path="url(#clip0_5_2820)">
                                   <path d="M0.951994 1.9107C0.439382 1.9107 0 1.47535 0 0.943256C0 0.435349 0.439382 0 0.951994 0H3.44182C3.46623 0 3.51505 0 3.53946 0C4.41823 0.024186 5.19935 0.193488 5.85842 0.604651C6.59072 1.06419 7.12775 1.76558 7.42067 2.80558C7.42067 2.82977 7.42067 2.85395 7.44508 2.87814L7.68918 3.84558H29.048C29.585 3.84558 30 4.28093 30 4.78884C30 4.88558 29.9756 4.98233 29.9512 5.07907L27.4614 15.0195C27.3637 15.4549 26.9731 15.7451 26.5338 15.7451H10.9113C11.2531 17.0028 11.5948 17.68 12.0586 17.9944C12.62 18.3572 13.5964 18.3814 15.2319 18.3572H15.2563H26.2897C26.8267 18.3572 27.2417 18.7926 27.2417 19.3005C27.2417 19.8326 26.8023 20.2437 26.2897 20.2437H15.2563C13.2303 20.2679 11.9854 20.2195 10.9845 19.5665C9.95932 18.8893 9.42229 17.7284 8.88527 15.6242L5.61432 3.36186C5.61432 3.33767 5.61432 3.33767 5.58991 3.31349C5.44345 2.7814 5.19935 2.4186 4.85761 2.22512C4.51587 2.00744 4.05207 1.9107 3.51505 1.9107C3.49064 1.9107 3.46623 1.9107 3.44182 1.9107H0.951994ZM23.4337 21.3563C24.7274 21.3563 25.7771 22.3963 25.7771 23.6781C25.7771 24.96 24.7274 26 23.4337 26C22.14 26 21.0903 24.96 21.0903 23.6781C21.0903 22.3963 22.14 21.3563 23.4337 21.3563ZM13.157 21.3563C14.4508 21.3563 15.5004 22.3963 15.5004 23.6781C15.5004 24.96 14.4508 26 13.157 26C11.8633 26 10.8137 24.96 10.8137 23.6781C10.8137 22.3963 11.8633 21.3563 13.157 21.3563ZM8.2262 5.73209L10.3987 13.8344H25.8015L27.8275 5.73209H8.2262Z" fill="white"/>
@@ -137,7 +138,8 @@
                             </a>
                             <button class="header__logout">Вихід</button>
                         </div>
-                    </div>                     
+                    </div>  
+                    
                     <button class="header__burger">
                         <svg xmlns="http://www.w3.org/2000/svg" width="43" height="26" viewBox="0 0 43 26" fill="none">
                             <line x1="1.75" y1="2.16998" x2="41.25" y2="2.16998" stroke="white" stroke-width="2.5" stroke-linecap="round"/>
@@ -159,6 +161,7 @@
                         </svg>
                     </button>
                 </div>
+
                 <nav class="header__menu">
                     <ul>
                         <li class="header__box">
@@ -207,8 +210,6 @@
                         <li>
                             <a href="#">Повернення і обмін</a>
                         </li>
-                    </ul>
-                    <ul>
                         <li>
                             <a href="#">Політика конфіденційності</a>
                         </li>
@@ -355,15 +356,15 @@
                             <div class="analogues__form-filters">
                                 <label class="filter__label">
                                     <input type="checkbox" name="brand-1" class="filter__checkbox">
-                                    <span class="checkmark">Brand 1</span>
+                                    <span class="checkmark">GKN/LOBRO/SPIDAN</span>
                                 </label>
                                 <label class="filter__label">
                                     <input type="checkbox" name="brand-2" class="filter__checkbox">
-                                    <span class="checkmark">Brand 2</span>
+                                    <span class="checkmark">Kolbenschmidt</span>
                                 </label>
                                 <label class="filter__label">
                                     <input type="checkbox" name="brand-3" class="filter__checkbox">
-                                    <span class="checkmark">Brand 3</span>
+                                    <span class="checkmark">Knecht-Mahle</span>
                                 </label>
                                 <label class="filter__label">
                                     <input type="checkbox" name="brand-4" class="filter__checkbox">
