--- a/index.html
+++ b/index.html
@@ -410,6 +410,7 @@
                         <div class="popular__slider">
                             <div class="swiper-wrapper">
                                 <div class="popular__product-slide swiper-slide">
+                                    <p class="popular__product-label">ТОП</p>
                                     <a class="popular__product-slide-image" href="#">
                                         <img src="img/popular/slide-2.png" alt="">
                                     </a>
@@ -425,6 +426,7 @@
                                     <p>450-500 UAH</p>
                                 </div>
                                 <div class="popular__product-slide swiper-slide">
+                                    <p class="popular__product-label">ТОП</p>
                                     <a class="popular__product-slide-image" href="#">
                                         <img src="img/popular/slide-2.png" alt="">
                                     </a>
@@ -440,6 +442,7 @@
                                     <p>450-500 UAH</p>
                                 </div>
                                 <div class="popular__product-slide swiper-slide">
+                                    <p class="popular__product-label">ТОП</p>
                                     <a class="popular__product-slide-image" href="#">
                                         <img src="img/popular/slide-2.png" alt="">
                                     </a>
@@ -455,6 +458,7 @@
                                     <p>450-500 UAH</p>
                                 </div>
                                 <div class="popular__product-slide swiper-slide">
+                                    <p class="popular__product-label">ТОП</p>
                                     <a class="popular__product-slide-image" href="#">
                                         <img src="img/popular/slide-2.png" alt="">
                                     </a>
@@ -470,6 +474,7 @@
                                     <p>450-500 UAH</p>
                                 </div>
                                 <div class="popular__product-slide swiper-slide">
+                                    <p class="popular__product-label">ТОП</p>
                                     <a class="popular__product-slide-image" href="#">
                                         <img src="img/popular/slide-2.png" alt="">
                                     </a>
@@ -485,6 +490,7 @@
                                     <p>450-500 UAH</p>
                                 </div>
                                 <div class="popular__product-slide swiper-slide">
+                                    <p class="popular__product-label">ТОП</p>
                                     <a class="popular__product-slide-image" href="#">
                                         <img src="img/popular/slide-2.png" alt="">
                                     </a>
