--- a/basket.html
+++ b/basket.html
@@ -229,7 +229,7 @@
         <section class="basket">
             <div class="container">
                 <div class="basket__inner">
-                    <a class="basket__nav" href="result.html">Назад до Пошуку</a>
+                    <a class="basket__nav navigation" href="result.html">Назад до Пошуку</a>
                     <div class="basket__content">
                         <div class="basket__box">
                             <h1>Кошик</h1>
