--- a/order.html
+++ b/order.html
@@ -229,7 +229,7 @@
        <section class="order">
             <div class="container">
                 <div class="order__inner">
-                    <a class="order__nav" href="basket.html">Назад до Кошику</a>
+                    <a class="order__nav navigation" href="basket.html">Назад до Кошику</a>
                     <form class="order__content" action="#">
                         <div class="order__box">
                             <h1>Оформлення замовлення</h1>
