--- a/basket.html
+++ b/basket.html
@@ -382,7 +382,7 @@
                                 <p>1600 UAH</p>
                             </div>
                             <hr>
-                            <a class="basket__total-make" href="order.html">Оформити замовлення</a>
+                            <a class="basket__total-make" href="checkout.html">Оформити замовлення</a>
                             <button class="basket__total-reset">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="19" height="21" viewBox="0 0 19 21" fill="none">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M0.885865 1.64626H7.18218V0.642578C7.18218 0.28916 7.45987 0 7.80035 0H11.2766C11.6169 0 11.8948 0.288989 11.8948 0.642578V1.64644H18.1143C18.3269 1.64644 18.5002 1.82708 18.5002 2.04788V4.0156H0.5V2.04771C0.5 1.8269 0.67345 1.64626 0.885865 1.64626ZM1.9287 5.05945H17.2056C17.5241 5.05945 17.8133 5.33272 17.7845 5.66169L16.4916 20.3981C16.463 20.7272 16.2302 20.9998 15.9124 20.9998H3.20368C2.88572 20.9998 2.65259 20.7278 2.62431 20.3981L1.34933 5.66169C1.32105 5.33152 1.60992 5.05945 1.9287 5.05945ZM11.8568 7.34829H13.4788V18.5104H11.8568V7.34829ZM5.44407 7.34829H7.06627V18.5104H5.44407V7.34829ZM8.65001 7.34829H10.2726V18.5104H8.65001V7.34829Z" fill="#191919"/>
