--- a/result.html
+++ b/result.html
@@ -7,13 +7,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/result.css">
 
 </head>
 <body class="body"> 
     <header class="header">
-        <div class="container">
+        <div class="wrapper">
             <div class="header__top">
                 <nav class="header__top-menu">
                     <ul>
@@ -46,7 +47,7 @@
             </div>
         </div>
         <div class="header__inner">
-            <div class="container">
+            <div class="wrapper">
                 <div class="header__about-mobile">
                     <p class="header__about-item">
                         <svg xmlns="http://www.w3.org/2000/svg" width="17" height="16" viewBox="0 0 17 16" fill="none">
@@ -151,7 +152,7 @@
             </div>
         </div>      
         <div class="header__menu-content">
-            <div class="container">
+            <div class="wrapper">
                 <div class="header__menu-top">
                     <p class="header__menu-name">Меню</p>
                     <button class="header__menu-close">
@@ -227,7 +228,7 @@
 
     <main class="main">
         <section class="result">
-            <div class="container">
+            <div class="wrapper">
                 <div class="result__inner">                    
                     <h1 class="result__title">Результат пошуку</h1>
                     <div class="result__content">
@@ -241,7 +242,9 @@
                                 </div>
                                 <div class="product__item-about">
                                     <div class="product__about-top">
-                                        <h3>GKN/LOBRO/SPIDAN</h3>
+                                        <a href="#">
+                                            <h3>GKN/LOBRO/SPIDAN</h3>
+                                        </a>
                                         <div class="product__about-block">
                                             <p>45634</p>
                                             <p>Ремонтний комплект пильника шарніра рівних кутових швидкостей, з елементами монтажу </p>
@@ -330,7 +333,7 @@
         </section>
         
         <section class="analogues">
-            <div class="container">
+            <div class="wrapper">
                 <div class="analogues__inner">
                     <div class="analogues__top">
                         <h2>Аналоги</h2>
@@ -423,7 +426,9 @@
                                 </div>
                                 <div class="product__item-about">
                                     <div class="product__about-top">
-                                        <h3>GKN/LOBRO/SPIDAN</h3>
+                                        <a href="#">
+                                            <h3>GKN/LOBRO/SPIDAN</h3>
+                                        </a>
                                         <div class="product__about-block">
                                             <p>45634</p>
                                             <p>Ремонтний комплект пильника шарніра рівних кутових швидкостей, з елементами монтажу </p>
@@ -508,7 +513,9 @@
                                 </div>
                                 <div class="product__item-about">
                                     <div class="product__about-top">
-                                        <h3>GKN/LOBRO/SPIDAN</h3>
+                                        <a href="#">
+                                            <h3>GKN/LOBRO/SPIDAN</h3>
+                                        </a>
                                         <div class="product__about-block">
                                             <p>45634</p>
                                             <p>Ремонтний комплект пильника шарніра рівних кутових швидкостей, з елементами монтажу </p>
@@ -593,7 +600,9 @@
                                 </div>
                                 <div class="product__item-about">
                                     <div class="product__about-top">
-                                        <h3>GKN/LOBRO/SPIDAN</h3>
+                                        <a href="#">
+                                            <h3>GKN/LOBRO/SPIDAN</h3>
+                                        </a>
                                         <div class="product__about-block">
                                             <p>45634</p>
                                             <p>Ремонтний комплект пильника шарніра рівних кутових швидкостей, з елементами монтажу </p>
@@ -678,7 +687,9 @@
                                 </div>
                                 <div class="product__item-about">
                                     <div class="product__about-top">
-                                        <h3>GKN/LOBRO/SPIDAN</h3>
+                                        <a href="#">
+                                            <h3>GKN/LOBRO/SPIDAN</h3>
+                                        </a>
                                         <div class="product__about-block">
                                             <p>45634</p>
                                             <p>Ремонтний комплект пильника шарніра рівних кутових швидкостей, з елементами монтажу </p>
@@ -763,7 +774,9 @@
                                 </div>
                                 <div class="product__item-about">
                                     <div class="product__about-top">
-                                        <h3>GKN/LOBRO/SPIDAN</h3>
+                                        <a href="#">
+                                            <h3>GKN/LOBRO/SPIDAN</h3>
+                                        </a>
                                         <div class="product__about-block">
                                             <p>45634</p>
                                             <p>Ремонтний комплект пильника шарніра рівних кутових швидкостей, з елементами монтажу </p>
@@ -848,7 +861,9 @@
                                 </div>
                                 <div class="product__item-about">
                                     <div class="product__about-top">
-                                        <h3>GKN/LOBRO/SPIDAN</h3>
+                                        <a href="#">
+                                            <h3>GKN/LOBRO/SPIDAN</h3>
+                                        </a>
                                         <div class="product__about-block">
                                             <p>45634</p>
                                             <p>Ремонтний комплект пильника шарніра рівних кутових швидкостей, з елементами монтажу </p>
@@ -966,7 +981,7 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
+        <div class="wrapper">
             <div class="footer__inner">
                 <div class="footer__top">
                     <a class="footer__logo" href="index.html">
@@ -1031,16 +1046,8 @@
                             </svg>
                         </a>
                         <a class="footer__social-item" href="#" target="_blank">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12" fill="none">
-                                <g clip-path="url(#clip0_5_3203)">
-                                  <path d="M12.268 3.63267C12.2612 3.1159 12.1643 2.60426 11.9817 2.12065C11.8234 1.71273 11.5815 1.34226 11.2717 1.03292C10.9618 0.723575 10.5907 0.482162 10.1821 0.324102C9.70395 0.144896 9.19877 0.0479953 8.6881 0.0375277C8.03062 0.00818789 7.82216 0 6.15316 0C4.48416 0 4.27024 4.57531e-08 3.61754 0.0375277C3.1071 0.0480722 2.60216 0.144971 2.12418 0.324102C1.71552 0.482052 1.34437 0.723426 1.0345 1.03278C0.724631 1.34214 0.482855 1.71266 0.324642 2.12065C0.144777 2.59768 0.0479262 3.1019 0.0382736 3.61152C0.00888493 4.2686 0 4.4767 0 6.14293C0 7.80915 -5.09215e-09 8.02204 0.0382736 8.67434C0.0485254 9.18471 0.144893 9.68826 0.324642 10.1666C0.48312 10.5744 0.725077 10.9448 1.03505 11.254C1.34503 11.5633 1.7162 11.8045 2.12487 11.9624C2.60153 12.1488 3.10657 12.2527 3.61822 12.2695C4.27639 12.2988 4.48484 12.3077 6.15385 12.3077C7.82285 12.3077 8.03677 12.3077 8.68947 12.2695C9.20012 12.2594 9.70533 12.1628 10.1835 11.9836C10.592 11.8253 10.963 11.5839 11.2728 11.2746C11.5827 10.9652 11.8245 10.5949 11.983 10.187C12.1628 9.70942 12.2592 9.20586 12.2694 8.69481C12.2988 8.03841 12.3077 7.83031 12.3077 6.1634C12.3063 4.49717 12.3063 4.28565 12.268 3.63267ZM6.14906 9.29388C4.40351 9.29388 2.98944 7.88216 2.98944 6.13952C2.98944 4.39687 4.40351 2.98515 6.14906 2.98515C6.98704 2.98515 7.79071 3.31749 8.38325 3.90904C8.97579 4.5006 9.30868 5.30293 9.30868 6.13952C9.30868 6.97611 8.97579 7.77843 8.38325 8.36999C7.79071 8.96155 6.98704 9.29388 6.14906 9.29388ZM9.43444 3.60401C9.33766 3.6041 9.24181 3.58514 9.15238 3.54821C9.06295 3.51128 8.9817 3.4571 8.91327 3.38878C8.84483 3.32046 8.79056 3.23934 8.75357 3.15006C8.71658 3.06078 8.69758 2.96509 8.69767 2.86847C8.69767 2.77193 8.71672 2.67632 8.75373 2.58713C8.79074 2.49793 8.84498 2.41688 8.91337 2.34861C8.98175 2.28034 9.06293 2.22619 9.15228 2.18924C9.24163 2.15229 9.33739 2.13327 9.4341 2.13327C9.5308 2.13327 9.62657 2.15229 9.71591 2.18924C9.80526 2.22619 9.88644 2.28034 9.95483 2.34861C10.0232 2.41688 10.0775 2.49793 10.1145 2.58713C10.1515 2.67632 10.1705 2.77193 10.1705 2.86847C10.1705 3.27514 9.84109 3.60401 9.43444 3.60401Z" fill="white"/>
-                                  <path d="M6.15659 8.00264C7.17722 8.00264 8.00459 7.17526 8.00459 6.15464C8.00459 5.13402 7.17722 4.30664 6.15659 4.30664C5.13597 4.30664 4.30859 5.13402 4.30859 6.15464C4.30859 7.17526 5.13597 8.00264 6.15659 8.00264Z" fill="white"/>
-                                </g>
-                                <defs>
-                                  <clipPath id="clip0_5_3203">
-                                    <rect width="12" height="12" fill="white"/>
-                                  </clipPath>
-                                </defs>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="13" height="11" viewBox="0 0 13 11" fill="none">
+                                <path d="M12.963 1.00141L11.0012 10.336C10.8532 10.9948 10.4672 11.1588 9.91871 10.8484L6.92961 8.62602L5.48729 10.0256C5.32768 10.1867 5.19419 10.3214 4.88657 10.3214L5.10132 7.24984L10.6413 2.19897C10.8822 1.9823 10.5891 1.86225 10.267 2.07892L3.41813 6.42999L0.469657 5.49887C-0.171695 5.29684 -0.183303 4.85178 0.603151 4.5414L12.1359 0.0585783C12.6699 -0.143456 13.1371 0.178628 12.963 1.00141Z" fill="white"/>
                             </svg>
                         </a>
                         <a class="footer__social-item" href="#" target="_blank">
